BUFIX: Fixed skills list wrapping bizarrely.

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,6 @@
   font-weight: bolder;
 }
 
+#skills {  
+  float:left;
+}
